# task_tracker

./: Dockerfile  README.md  docker-compose.yml  docker.env  pyproject.toml
task_tracker/projects/: models.py  serializers.py  views.py
task_tracker/projects/migrations/: 0001_initial.py  0002_initial.py
task_tracker/projects/tests/: pytest.ini  test_models.py  test_project_members.py  test_task_assignments.py  test_user_roles.py
task_tracker/task_manager/: asgi.py  settings.py  urls.py
task_tracker/tasks/: admin.py  models.py  serializers.py  signals.py  tasks.py  views.py
task_tracker/tasks/migrations/: 0001_initial.py  0002_initial.py
task_tracker/user/: models.py  serializers.py  urls.py  views.py
task_tracker/user/migrations/: 0001_initial.py  0002_delete_project_alter_customuser_current_projects_and_more.py
